testsuite/tests/driver/invalid_syntax/w_project_keep_going/test_a.ads
package Test_A is
   A : constant array (Positive range <>) of Integer := (0, );
end package Test_A;
